# ISRIR

./: .gitignore  INSTALL_MANUAL.md  QUICK_START.md  QUICK_START_UV.md  README_OPTIMIZED.md  create_dummy_logs.py  generateonnx.py  infer.py  install_dependencies.py  install_dependencies_uv.py  main.py  prepare_data.py  prepare_single_image.py  pyproject.toml  requirements_optimized.txt  run_optimized_training.py  sr.py  sr_optimized.py  sr_optimized_copy.py
config/: 517lc.json  517lc_fresh_start.json  517lc_fresh_start_auto_optimized.json  517lc_optimized.json  517lc_optimized_auto_optimized.json  517lc_optimized_auto_optimized_auto_optimized.json  517lc_speed_optimized.json  517lc_speed_optimized_auto_optimized.json  517lc_test.json  517lc_test_auto_optimized.json  onnxonly.json  sample_ddpm_128.json  spdopt_comment.json  spdoptimized.json  sr_sr3_16_128.json  test.json  test_single_image.json
core/: logger.py  param_logger.py  wandb_logger.py
data/: LRHR_dataset.py  prepare_data.py  process_image.py  util.py
model/: base_model.py  model.py
model/ddpm_modules/: diffusion.py
